<resources>
    <string name="app_name">Binary Clock</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="binary_game">BINARY GAME</string>
    <string name="binary_instructions">Please Enter the Time presented on the Binary Clock as Decimals !</string>
    <string name="start_game">Start Game</string>
    <string name="column">:</string>
    <string name="send">Send</string>
    <string name="guide">Guide</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="paired_serial_devices">Paired Serial Devices</string>
    <string name="reset_connect_devices">Reset Connect devices</string>
    <string name="time_format">Time format</string>
    <string name="military_format">Military Format</string>
    <string name="am_pm">Am / Pm</string>
    <string name="disconnect">Disconnect</string>
    <string name="version">v1</string>
    <string name="love">Enjoy the Binaries</string>
    <string name="copy">copyright</string>
    <string name="scrap">scrappers</string>
    <string name="tom">Thomas Micheal</string>
    <string name="tom_description">Software Development</string>
    <string name="face">facebook</string>
    <string name="gmail">Gmail</string>
    <string name="pav">Pavly Gerges</string>
    <string name="pav_description">Software Development</string>
    <string name="bishoy">Bishoy Reyad</string>
    <string name="bishoy_description"><![CDATA[Hardware Dev. & Icon Pack]]></string>
    <string name="power">Power</string>
    <string name="auto_config_time">Auto-config Time</string>
    <string name="manual_config_time">Manual-config Time</string>
    <string name="alarm">Alarm</string>
    <string name="set_alarm">set alarm</string>
    <string name="cancelAlarm">Cancel</string>

</resources>
