<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/layout_background"
    tools:context=".mainScreens.Settings">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/headerBlue"
        >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_black_24dp"
                android:layout_margin="4dp"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textSize="24sp"
                android:layout_marginStart="36dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="monospace"
                android:textStyle="bold"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/themes"
        android:fontFamily="monospace"
        android:layout_marginStart="12dp"
        android:textColor="?attr/textcolor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="4dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp">
        <TextView
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:text="L"
            android:tag="Light"
            android:onClick="change_theme"
            android:textColor="#313131"
            android:background="#eeffffff"
            android:gravity="center"
            android:textSize="28pt"
            android:fontFamily="cursive"
            android:layout_weight="1"
             />
        <TextView
            android:tag="Dark"
            android:layout_height="100dp"
            android:layout_width="0dp"
            android:text="D"
            android:onClick="change_theme"
            android:textColor="#ffffff"
            android:background="#dd313131"
            android:gravity="center"
            android:textSize="28pt"
            android:fontFamily="cursive"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_serial_devices"
        android:textColor="?attr/textcolor"
        android:fontFamily="monospace"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginTop="12dp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="18dp"
        android:textColor="?attr/textcolor"
        android:padding="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textcolor"
        android:text="@string/reset_connect_devices"
        android:fontFamily="monospace"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginTop="12dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_refresh_black_24dp"
            android:background="#00ffffff"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_format"
        android:fontFamily="monospace"
        android:layout_marginStart="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?attr/textcolor"
        android:padding="8dp"
        android:layout_marginTop="12dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/militarybtn"
        android:onClick="change_clockMode"
        android:tag="military"
        android:layout_marginStart="18dp"
        android:textColor="?attr/textcolor"
        android:text="@string/military_format"
        android:fontFamily="monospace"
        android:textSize="16sp"
        />
    <androidx.appcompat.widget.AppCompatRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textColor="?attr/textcolor"
        android:id="@+id/hr12btn"
        android:tag="AM/PM"
        android:onClick="change_clockMode"
        android:layout_marginStart="18dp"
        android:text="@string/am_pm"
        android:fontFamily="monospace"
        android:textSize="16sp"
        />
    </RadioGroup>






</LinearLayout>